# ort_demo

./: .gitignore  README.md
cpp/: CMakeLists.txt
cpp/cmake/: FindONNXRuntime.cmake
cpp/include/: cls.h  config.h  det.h  ppocr.h  rec.h  utils.h  version.h.in
cpp/src/: cls.cpp  det.cpp  ppocr.cpp  rec.cpp  test_cls.cpp  test_det.cpp  test_ppocr.cpp  test_rec.cpp
python/: demo.py  main.py  test_cls.py  test_det.py
python/paddleocr/: __init__.py  cls.py  det.py  paddleocr.py  ppocr.py  rec.py
python/paddleocr/utils/: __init__.py  config.py  logger.py
python/test/: test_ppocr.py  test_ppocr_det.py  test_ppocr_rec.py
